Update text files (readme/licenses)
Add RSS filter re-evaluation
Remove SSMTPlib license and the msgfmt (also mentioned in PythonParts license)

--- a/README.mkd
+++ b/README.mkd
@@ -18,6 +18,7 @@ Release Notes  -  SABnzbd 1.2.0
 - Improvements to RSS:
   * Added 'From Show SxxEyy' filter
   * RSS feeds now show the category, age and when the NZB was added to the queue
+  * RSS feeds will only re-evaluate after clicking 'Apply Filters' or 'Read Feed'
 - Detection of par2-files in completely obfuscated NZB's
 - Verification (par2) and UnRAR can now be aborted from Glitter
 
@@ -31,7 +32,7 @@ Release Notes  -  SABnzbd 1.2.0
 - Auto-disables CPU-usage optimizations if they result in slowdown
 - no_penalties now applies to all types of penalties
 - par2cmdline would fail jobs in folders ending on ".par2"
-- MemoryError (no more memory available) now stops downloading
+- MemoryError (no more memory available) now pauses downloading
 
 ## Translations
 - Many translations updated, thanks to our translators!
