--- a/README.mkd
+++ b/README.mkd
@@ -21,6 +21,7 @@ Release Notes  -  SABnzbd 1.2.0
   * RSS feeds will only re-evaluate after clicking 'Apply Filters' or 'Read Feed'
 - Detection of par2-files in completely obfuscated NZB's
 - Verification (par2) and UnRAR can now be aborted from Glitter
+- Faster startup and restart of SABnzbd
 
 ## Changes:
 - Dropped dependency on PyOpenSSL, now only requires cryptography package
@@ -34,6 +35,7 @@ Release Notes  -  SABnzbd 1.2.0
 - no_penalties now applies to all types of penalties
 - par2cmdline would fail jobs in folders ending on ".par2"
 - MemoryError (no more memory available) now pauses downloading
+- Removing files from active download was not working correctly
 
 ## Translations
 - Many translations updated, thanks to our translators!
