--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,5 @@
-Release Notes  -  SABnzbd 1.2.0
-===============================
+Release Notes  -  SABnzbd 1.2.0Beta1
+====================================
 
 ## What's new in 1.2.0
 - New SSL engine:
@@ -25,10 +25,11 @@ Release Notes  -  SABnzbd 1.2.0
 - Duplicates can now be marked as Failed (to notify external tools)
 
 ## Changes:
+- Python post/pre/notification-scripts now require execute (+x) permissions
 - Dropped dependency on PyOpenSSL, now only requires cryptography package
 - Update 7zip to 16.04 and UnRar to 5.40 for Windows/macOS
-- Python post/pre/notification-scripts require execute permissions
-- Removed web_watchdog
+- Update Python to 2.7.13 on Windows and macOS binaries
+- Dropped support for macOS 10.9 (Mavericks)
 
 ## Bug fixes
 - Re-use IP-address for new connections when a server has open connections
